@@ -205,15 +205,34 @@
 	function slideshow_accessible($slideshowid, $perm){
 		$result = false;
 
-		if(DBselect('select slideshowid from slideshows where slideshowid='.$slideshowid.
-			' and '.DBin_node('slideshowid', get_current_nodeid(null,$perm))))
-		{
+		$sql = 'SELECT slideshowid '.
+				' FROM slideshows '.
+				' WHERE slideshowid='.$slideshowid.
+					' AND '.DBin_node('slideshowid', get_current_nodeid(null,$perm));
+		if(DBselect($sql)){
 			$result = true;
-			$db_slides = DBselect('select distinct screenid from slides where slideshowid='.$slideshowid);
-			while($slide_data = DBfetch($db_slides)){
-				if(!$result = screen_accessible($slide_data["screenid"], PERM_READ_ONLY)) break;
+			
+			$sql = 'SELECT DISTINCT screenid '.
+					' FROM slides '.
+					' WHERE slideshowid='.$slideshowid;
+			$db_screens = DBselect($sql);
+			while($slide_data = DBfetch($db_screens)){
+				$screenids[$slide_data['screenid']] = $slide_data['screenid'];
+			}
+			
+			$options = array(
+					'screenids' => $screenids
+				);
+			if($perm == PERM_READ_WRITE) $options['editable'] = 1;
+
+			$screens = CScreen::get($options);
+			$screens = zbx_toHash($screens, 'screenid');
+
+			foreach($screenids as $snum => $screenid){
+				if(!isset($screens[$screenid])) return false;
 			}
 		}
+		
 	return $result;
 	}
 
